#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
#AC_CONFIG_SRCDIR([tools/Options.h])
#AC_CONFIG_HEADERS([config.h])

AC_PREFIX_DEFAULT(/usr/local/browndeer)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stddef.h stdlib.h string.h sys/time.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([floor gettimeofday pow select sqrt])

PWD=`pwd`

SHMEM_INCLUDE_PATH=/usr/local/include
SHMEM_LIB_PATH=/usr/local/lib

### extract enable/disable options

AC_ARG_ENABLE(shmem,
  AC_HELP_STRING(
		[--enable-shmem],
		[enable shmem support (default=yes)]),
		,
		enable_shmem=yes
	)

### extract with options

# test for --with-shmem-include specification
AC_ARG_WITH(shmem,
	AC_HELP_STRING(
		[--with-shmem-include=DIR],
		[specify shmem include path]),
		[
			if test x$withval = xyes; then
				AC_MSG_ERROR([usage: --with-shmem=DIR])
			elif ! test -e $withval/shmem.h; then
				AC_MSG_ERROR([bad lib path, could not find shmem.h])
			else
				SHMEM_INCLUDE_PATH=$withval;
			fi;
		],
  []
	)

# test for --with-shmem-lib specification
AC_ARG_WITH(shmem,
	AC_HELP_STRING(
		[--with-shmem-lib=DIR],
		[specify shmem lbrary path]),
		[
			if test x$withval = xyes; then
				AC_MSG_ERROR([usage: --with-shmem=DIR])
			elif ! test -e $withval/libshmem.so; then
				AC_MSG_ERROR([bad lib path, could not find libshmem.so])
			else
				SHMEM_LIB_PATH=$withval;
			fi;
		],
  []
	)

AC_SUBST(SHMEM_INCLUDE_PATH)
AC_SUBST(SHMEM_LIB_PATH)

AC_CONFIG_FILES([
Makefile
lcc.sh
])

AC_OUTPUT
